[project]
name = "tolyan-tropinki-polyan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyinstaller>=6.19.0",
    "requests>=2.32.5",
    "ruff>=0.14.8",
]
